<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rohan.photolib.AlbumDetailView">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addUserButton"
                android:id="@+id/buttonAddUser"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addPhotoButton"
                android:id="@+id/buttonAddPhoto"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pendingPrompt"
                android:id="@+id/buttonPending"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPrompt"
                    android:id="@+id/textViewPrivacyPrompt"
                    android:layout_marginTop="10dp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switchEditPrivacy"
                    android:id="@+id/switchAlbumPrivacy" />
            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saveShort"
                android:id="@+id/albumSaveButton"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/butDelete"
                android:id="@+id/buttonDeleteAlbum"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteClickPrompt"
            android:id="@+id/deleteClickPrompt"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewPhotosListing"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</RelativeLayout>
